changes pills in progress

--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -133,6 +133,11 @@
   width: 60%;
 }
 
+@media (min-width: 360px) and (max-width: 576px) {
+  .askCardTur {
+    font-size: 3em;
+  }
+}
 @media (min-width: 360px) and (max-width: 772px) {
   .orderCardTur {
     display: none;
