--- a/src/components/Inputs/styles.css
+++ b/src/components/Inputs/styles.css
@@ -24,6 +24,9 @@
   line-height: normal;
   letter-spacing: 0.16px;
 }
+::placeholder {
+  color: rgba(255, 255, 255, 0.63);
+}
 .containerMessage, .containerMessageTwo {
   border-radius: 30px;
   width: 200px;
@@ -257,7 +260,7 @@
     display: none;
   }
 }
-
+ 
 @media (min-width: 993px) and (max-width: 1200px)  {
   .containerMessage, .containerMessageTwo {
     width: 150px;
@@ -287,5 +290,18 @@
   }
   .formStyles {
     width: 60%;
+  }
+}
+
+@media (min-width: 1201px) and (max-width: 1440px) {
+  .imgCodigo {
+    width: 250px;
+  }
+  .imgCheck {
+    width: 140px;
+  }
+  .popup-content {
+    width: 350px;
+    justify-content: space-evenly;
   }
 }
