--- a/src/screens/Turist/TuristFive/styles.css
+++ b/src/screens/Turist/TuristFive/styles.css
@@ -65,6 +65,7 @@
 @media (min-width: 577px) and (max-width: 992px)  {
     .titleTuristFive {
         font-size: 2.4em;
+        width: 60%;
     }
 }
 @media (min-width: 993px) and (max-width: 1200px) {
