--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -1,38 +1,39 @@
-
 @font-face {
-    font-family: "Poppins";
-    src: url("../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
-    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
-  }
+  font-family: "Poppins";
+  src: url("../../fonts/Poppins/Poppins-Black.ttf");
+  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+  src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+  src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+  src: url("../../fonts/Poppins/Poppins-Light.ttf");
+  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+  src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+  src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+}
 
-  .animation, .animationTwo {
-    padding: 20px 20px;
-    width: 300px;
-    background-color: #111; 
-    border-radius: 100px;
-    border: 2px solid white;
-    cursor: pointer;
-    transition: background-color 300ms ease-in-out, color 300ms ease-in-out; 
-    color: #fff;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 1.3em;
-    font-weight: 400;
-    position: absolute;
-  }
-  .blink {
-    background-color: #62fee2; 
-    color: #111; 
-    transition: background-color 0.5s ease-in-out; 
-    border: 2px solid #62fee2;
-  }
+.animation,
+.animationTwo {
+  padding: 20px 20px;
+  width: 300px;
+  background-color: #111;
+  border-radius: 100px;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
+  color: #fff;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 1.3em;
+  font-weight: 400;
+  position: absolute;
+}
+.blink {
+  background-color: #62fee2;
+  color: #111;
+  transition: background-color 0.5s ease-in-out;
+  border: 2px solid #62fee2;
+}
+
 .blurTwo {
   width: 100%;
   display: flex;
@@ -71,18 +72,14 @@
   width: 90%;
   height: 450px;
   display: flex;
-  justify-content: center; 
-  position: relative; 
+  justify-content: center;
+  position: relative;
   overflow: hidden;
 }
 
-.animation:hover {
-  color: #62fee2;
+.animation:hover, .animationTwo:hover {
   border: 2px solid #62fee2;
 }
-
-
-
 
 @keyframes floating {
   0% {
@@ -119,10 +116,7 @@
   animation: floatingTwo 6s ease-in-out infinite;
 }
 
-
-
-
-@media (min-width: 360px) and (max-width: 576px)  {
+@media (min-width: 360px) and (max-width: 576px) {
   .titleSectionTwo {
     width: 80%;
     font-size: 2.5em;
@@ -131,34 +125,82 @@
   .containerSectionTwo {
     padding: 0px;
   }
-  .animation, .animationTwo {
+  .animation,
+  .animationTwo {
     padding: 10px;
     width: 150px;
-    font-size: .8em;
+    font-size: 0.8em;
   }
-  .btn01 { top: 3%; left: 55%; } 
-  .btn2 { top: 3%; left: 5%}
-  .btn3 {top: 18%; left: 3%}
-  .btn4 { top: 18%; left: 50% }
-  .btn5 { top: 28%; left: 5%}
-  .btn6 {top: 35%; left: 55%}
-  .btn7 { top: 42%; left: 0% }
-  .btn8 { top: 45%; left: 45% }
-  .btn9 { top: 53%; left: 3% }
-  .btn10 { top: 55%; left: 55% }
-  .btn11 { top: 65%; left: 5% }
-  .btn12 { top: 68%; left: 50% }
-  .btn13 { top: 78%; left: 55% }
-  .btn14 { top: 75%; left: 5% }
-  .btn15 { top: 90%; left: 50% }
-  .btn16 { top: 88%; left: 5% }
+  .btn01 {
+    top: 3%;
+    left: 55%;
+  }
+  .btn2 {
+    top: 3%;
+    left: 5%;
+  }
+  .btn3 {
+    top: 18%;
+    left: 3%;
+  }
+  .btn4 {
+    top: 18%;
+    left: 50%;
+  }
+  .btn5 {
+    top: 28%;
+    left: 5%;
+  }
+  .btn6 {
+    top: 35%;
+    left: 55%;
+  }
+  .btn7 {
+    top: 42%;
+    left: 0%;
+  }
+  .btn8 {
+    top: 45%;
+    left: 45%;
+  }
+  .btn9 {
+    top: 53%;
+    left: 3%;
+  }
+  .btn10 {
+    top: 55%;
+    left: 55%;
+  }
+  .btn11 {
+    top: 65%;
+    left: 5%;
+  }
+  .btn12 {
+    top: 68%;
+    left: 50%;
+  }
+  .btn13 {
+    top: 78%;
+    left: 55%;
+  }
+  .btn14 {
+    top: 75%;
+    left: 5%;
+  }
+  .btn15 {
+    top: 90%;
+    left: 50%;
+  }
+  .btn16 {
+    top: 88%;
+    left: 5%;
+  }
 
   .rotated-items-container {
     height: 550px;
     width: 90%;
   }
 }
-
 
 @media (min-width: 577px) and (max-width: 768px) {
   .titleSectionTwo {
@@ -168,34 +210,82 @@
   .containerSectionTwo {
     padding: 0px;
   }
-  .animation, .animationTwo {
+  .animation,
+  .animationTwo {
     padding: 10px;
     width: 200px;
-    font-size: .9em;
+    font-size: 0.9em;
   }
-  .btn01 { top: 3%; left: 55%; } 
-  .btn2 { top: 3%; left: 5%}
-  .btn3 {top: 18%; left: 3%}
-  .btn4 { top: 18%; left: 50% }
-  .btn5 { top: 28%; left: 5%}
-  .btn6 {top: 35%; left: 55%}
-  .btn7 { top: 42%; left: 0% }
-  .btn8 { top: 45%; left: 45% }
-  .btn9 { top: 53%; left: 3% }
-  .btn10 { top: 55%; left: 55% }
-  .btn11 { top: 65%; left: 5% }
-  .btn12 { top: 68%; left: 50% }
-  .btn13 { top: 78%; left: 55% }
-  .btn14 { top: 75%; left: 5% }
-  .btn15 { top: 90%; left: 50% }
-  .btn16 { top: 88%; left: 5% }
+  .btn01 {
+    top: 3%;
+    left: 55%;
+  }
+  .btn2 {
+    top: 3%;
+    left: 5%;
+  }
+  .btn3 {
+    top: 18%;
+    left: 3%;
+  }
+  .btn4 {
+    top: 18%;
+    left: 50%;
+  }
+  .btn5 {
+    top: 28%;
+    left: 5%;
+  }
+  .btn6 {
+    top: 35%;
+    left: 55%;
+  }
+  .btn7 {
+    top: 42%;
+    left: 0%;
+  }
+  .btn8 {
+    top: 45%;
+    left: 45%;
+  }
+  .btn9 {
+    top: 53%;
+    left: 3%;
+  }
+  .btn10 {
+    top: 55%;
+    left: 55%;
+  }
+  .btn11 {
+    top: 65%;
+    left: 5%;
+  }
+  .btn12 {
+    top: 68%;
+    left: 50%;
+  }
+  .btn13 {
+    top: 78%;
+    left: 55%;
+  }
+  .btn14 {
+    top: 75%;
+    left: 5%;
+  }
+  .btn15 {
+    top: 90%;
+    left: 50%;
+  }
+  .btn16 {
+    top: 88%;
+    left: 5%;
+  }
 
   .rotated-items-container {
     height: 550px;
     width: 90%;
   }
 }
-
 
 @media (min-width: 769px) and (max-width: 992px) {
   .titleSectionTwo {
@@ -212,34 +302,83 @@
   .blurTwo {
     width: 60%;
   }
-  .animation, .animationTwo {
+  .animation,
+  .animationTwo {
     padding: 10px;
     width: 210px;
     font-size: 1em;
   }
-  .btn01 { top: 3%; left: 60%; } 
-  .btn2 { top: 3%; left: 0%}
-  .btn3 {top: 13%; left: 30%}
-  .btn4 { top: 15%; left: 60% }
-  .btn5 { top: 15%; left: 0%}
-  .btn6 {top: 25%; left: 30%}
-  .btn7 { top: 35%; left: 10% }
-  .btn8 { top: 40%; left: 50% }
-  .btn9 { top: 50%; left: 30% }
-  .btn10 { top: 60%; left: 60% }
-  .btn11 { top: 60%; left: 0% }
-  .btn12 { top: 65%; left: 30% }
-  .btn13 { top: 75%; left: 55% }
-  .btn14 { top: 75%; left: 15% }
-  .btn15 { top: 88%; left: 60% }
-  .btn16 { top: 90%; left: 5% }
+  .btn01 {
+    top: 3%;
+    left: 60%;
+  }
+  .btn2 {
+    top: 3%;
+    left: 0%;
+  }
+  .btn3 {
+    top: 13%;
+    left: 30%;
+  }
+  .btn4 {
+    top: 15%;
+    left: 60%;
+  }
+  .btn5 {
+    top: 15%;
+    left: 0%;
+  }
+  .btn6 {
+    top: 25%;
+    left: 30%;
+  }
+  .btn7 {
+    top: 35%;
+    left: 10%;
+  }
+  .btn8 {
+    top: 40%;
+    left: 50%;
+  }
+  .btn9 {
+    top: 50%;
+    left: 30%;
+  }
+  .btn10 {
+    top: 60%;
+    left: 60%;
+  }
+  .btn11 {
+    top: 60%;
+    left: 0%;
+  }
+  .btn12 {
+    top: 65%;
+    left: 30%;
+  }
+  .btn13 {
+    top: 75%;
+    left: 55%;
+  }
+  .btn14 {
+    top: 75%;
+    left: 15%;
+  }
+  .btn15 {
+    top: 88%;
+    left: 60%;
+  }
+  .btn16 {
+    top: 90%;
+    left: 5%;
+  }
 
   .rotated-items-container {
     height: 550px;
     width: 90%;
   }
 }
-@media (min-width: 993px) and (max-width:1200px) {
+@media (min-width: 993px) and (max-width: 1200px) {
   .titleSectionTwo {
     font-size: 4rem;
     width: 60%;
@@ -251,34 +390,79 @@
     width: 90%;
     height: 350px;
   }
-  .animation, .animationTwo {
+  .animation,
+  .animationTwo {
     padding: 10px;
     width: 210px;
     font-size: 1em;
   }
-  .btn01 { top: 3%; left: 72%; } 
-  .btn2 { top: 3%; left: 0%}
-  .btn3 {top: 3%; left: 25%}
-  .btn4 { top: 3%; left: 50% }
-  .btn5 { top: 20%; left: 28%}
-  .btn6 {top: 25%; left: 52%}
-  .btn7 { top: 25%; left: 3% }
-  .btn8 { top: 25%; left: 75% }
-  .btn9 { top: 42%; left: 50% }
-  .btn10 { top: 40%; left: 72% }
-  .btn11 { top: 42%; left: 0% }
-  .btn12 { top: 42%; left: 26% }
-  .btn13 { top: 60%; left: 52% }
-  .btn14 { top: 60%; left: 28% }
-  .btn15 { top: 65%; left: 75% }
-  .btn16 { top: 60%; left: 5% }
+  .btn01 {
+    top: 3%;
+    left: 72%;
+  }
+  .btn2 {
+    top: 3%;
+    left: 0%;
+  }
+  .btn3 {
+    top: 3%;
+    left: 25%;
+  }
+  .btn4 {
+    top: 3%;
+    left: 50%;
+  }
+  .btn5 {
+    top: 20%;
+    left: 28%;
+  }
+  .btn6 {
+    top: 25%;
+    left: 52%;
+  }
+  .btn7 {
+    top: 25%;
+    left: 3%;
+  }
+  .btn8 {
+    top: 25%;
+    left: 75%;
+  }
+  .btn9 {
+    top: 42%;
+    left: 50%;
+  }
+  .btn10 {
+    top: 40%;
+    left: 72%;
+  }
+  .btn11 {
+    top: 42%;
+    left: 0%;
+  }
+  .btn12 {
+    top: 42%;
+    left: 26%;
+  }
+  .btn13 {
+    top: 60%;
+    left: 52%;
+  }
+  .btn14 {
+    top: 60%;
+    left: 28%;
+  }
+  .btn15 {
+    top: 65%;
+    left: 75%;
+  }
+  .btn16 {
+    top: 60%;
+    left: 5%;
+  }
 }
 
-
-
-
-
-@media (min-width: 1201px) and (max-width: 1440px)  {
+@media (min-width: 1201px) and (max-width: 1440px) {
   .titleSectionTwo {
     font-size: 4rem;
     width: 40%;
@@ -286,53 +470,159 @@
   .containerSectionTwo {
     padding: 0px;
   }
-
   .rotated-items-container {
     width: 90%;
   }
-  .animation, .animationTwo {
+  .animation,
+  .animationTwo {
     padding: 10px;
-    width: 290px;
+    width: 250px;
     height: 75px;
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
-  .btn01 { top: 3%; left: 72%; } 
-  .btn2 { top: 3%; left: 0%}
-  .btn3 {top: 3%; left: 25%}
-  .btn4 { top: 3%; left: 48% }
-  .btn5 { top: 20%; left: 28%}
-  .btn6 {top: 25%; left: 52%}
-  .btn7 { top: 25%; left: 3% }
-  .btn8 { top: 25%; left: 75% }
-  .btn9 { top: 50%; left: 50% }
-  .btn10 { top: 45%; left: 72% }
-  .btn11 { top: 42%; left: 0% }
-  .btn12 { top: 42%; left: 26% }
-  .btn13 { top: 80%; left: 52% }
-  .btn14 { top: 70%; left: 28% }
-  .btn15 { top: 65%; left: 75% }
-  .btn16 { top: 80%; left: 5% }
-
+  .btn01 {
+    top: 3%;
+    left: 72%;
+  }
+  .btn2 {
+    top: 3%;
+    left: 0%;
+  }
+  .btn3 {
+    top: 3%;
+    left: 25%;
+  }
+  .btn4 {
+    top: 3%;
+    left: 48%;
+  }
+  .btn5 {
+    top: 25%;
+    left: 28%;
+  }
+  .btn6 {
+    top: 30%;
+    left: 52%;
+  }
+  .btn7 {
+    top: 30%;
+    left: 3%;
+  }
+  .btn8 {
+    top: 25%;
+    left: 75%;
+  }
+  .btn9 {
+    top: 55%;
+    left: 50%;
+  }
+  .btn10 {
+    top: 45%;
+    left: 72%;
+  }
+  .btn11 {
+    top: 55%;
+    left: 0%;
+  }
+  .btn12 {
+    top: 52%;
+    left: 26%;
+  }
+  .btn13 {
+    top: 80%;
+    left: 52%;
+  }
+  .btn14 {
+    top: 70%;
+    left: 28%;
+  }
+  .btn15 {
+    top: 70%;
+    left: 75%;
+  }
+  .btn16 {
+    top: 80%;
+    left: 5%;
+  }
 }
 
 @media (min-width: 1441px) {
-  .animation {
-    font-size: 1.5em;
-    border: 3px solid white;
-  }
-  .selected { 
-    border: 3px solid #62fee2;
-  }
-  .animation:hover {
+  .selected {
     border: 3px solid #62fee2;
   }
   .rotated-items-container {
-    width: 80%;
+    width: 90%;
+    height: 580px;
   }
-
+  .animation,
+  .animationTwo {
+    padding: 10px;
+    width: 320px;
+    height: 100px;
+    font-size: 1.5em;
+  }
+  .btn01 {
+    top: 3%;
+    left: 72%;
+  }
+  .btn2 {
+    top: 3%;
+    left: 0%;
+  }
+  .btn3 {
+    top: 3%;
+    left: 25%;
+  }
+  .btn4 {
+    top: 3%;
+    left: 48%;
+  }
+  .btn5 {
+    top: 25%;
+    left: 28%;
+  }
+  .btn6 {
+    top: 30%;
+    left: 52%;
+  }
+  .btn7 {
+    top: 30%;
+    left: 3%;
+  }
+  .btn8 {
+    top: 25%;
+    left: 75%;
+  }
+  .btn9 {
+    top: 55%;
+    left: 50%;
+  }
+  .btn10 {
+    top: 45%;
+    left: 72%;
+  }
+  .btn11 {
+    top: 55%;
+    left: 0%;
+  }
+  .btn12 {
+    top: 52%;
+    left: 26%;
+  }
+  .btn13 {
+    top: 80%;
+    left: 52%;
+  }
+  .btn14 {
+    top: 70%;
+    left: 28%;
+  }
+  .btn15 {
+    top: 70%;
+    left: 75%;
+  }
+  .btn16 {
+    top: 80%;
+    left: 5%;
+  }
 }
-
-
-
-
-
