--- a/src/components/SwipperCard/styles.css
+++ b/src/components/SwipperCard/styles.css
@@ -1,80 +1,26 @@
-
-.swiper-cards .swiper-slide {
-  overflow: visible;
-}
-.imgSwipper, .imgSwipperTres {
-  box-shadow: 0 0 10px rgb(98 254 226 / 25%);
-  border-radius: 15px;
-}
 .swiper {
-    width: 500px;
-    height: 320px;
-  }
-  
-  .swiper-slide {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 18px;
-    transform: rotateX(0deg) rotateY(0deg) translateZ(0px);
-    transition: transform 0.5s ease;
-  }
-  
-  .swiper-slide:nth-child(1) {
-    transform: translateY(0px);
-  }
-  
-  .swiper-slide:nth-child(2) {
-    transform: translateY(-30px);
-  }
-  
-  .swiper-slide:nth-child(3) {
-    transform: translateY(-60px);
-  }
-  
-  .imgSwipper {
-    width: 100%;
-  }
-  
-  .swiper-3d .swiper-slide-shadow {
-    background-color: rgba(0, 0, 0, 0);
-    position: relative;
-  }
-  
-  @media (min-width: 360px) and (max-width: 576px)  {
-    .swiper {
-      width: 300px;
-      height: 400px;
-    }
-  }
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  @media (min-width: 577px) and (max-width: 768px) {
-    .swiper {
-      width: 370px;
-      height: 500px;
-    }
-  }
-  @media (min-width: 769px) and (max-width: 992px) {
-    .swiper {
-      width: 450px;
-      height: 500px;
-    }
-  }
-  @media (min-width: 993px) and (max-width: 1200px) {
-    .swiper {
-      width: 400px;
-      height: 500px;
-    }
-    .imgSwipper {
-      width: 100%;
-    }
-  }
-  @media (min-width: 1201px) and (max-width: 1440px) {
-    .swiper {
-      width: 400px;
-      height: 500px;
-    }
-    .imgSwipper {
-      width: 550px;
-    }
-  }
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.swiper-3d .swiper-wrapper {
+  align-items: center;
+}
+/* .swiper-slide:nth-child(1n) {
+
+}
+
+.swiper-slide:nth-child(2n) {
+} */
+.imgSwipper {
+  width: 100%;
+}
+
