--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -24,12 +24,18 @@
 .imgGroup {
   width: 100%;
 }
-
+.containerTotalFour {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  align-items: center;
+  justify-content: center;
+  gap: 3em;
+}
 .cardFour {
-  width: 60%;
+  width: 500px;
   height: auto;
   gap: 3rem;
-  margin-left: 2rem;
   border-radius: 30px;
   background: #ffffff1a;
   background-blend-mode: soft-light, normal;
@@ -39,7 +45,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center; 
-  display: flex;
   align-items: flex-start;
 }
 
@@ -68,11 +73,10 @@
   width: 30%;
 }
 .containerMoveImageFour {
-  margin-right: 2rem;
-  display: flex;
+display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 50%;
   height: 600px;
 }
 .moveImage {
