--- a/src/screens/styles.css
+++ b/src/screens/styles.css
@@ -125,3 +125,11 @@
         width: 100%;
     }
 }
+@media (min-width: 1441px)  {
+    .coinFour {
+        width: 10%;
+    }
+    .coinOne {
+        width: 15%;
+    }
+}
