--- a/src/screens/Terminos/styles.css
+++ b/src/screens/Terminos/styles.css
@@ -1,52 +1,86 @@
 @font-face {
-    font-family: "Poppins";
-    src: url("../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../fonts/Poppins/Poppins-Medium.ttf");
-    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../fonts/Poppins/Poppins-Thin.ttf");
+  font-family: "Poppins";
+  src: url("../../fonts/Poppins/Poppins-Black.ttf");
+  src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+  src: url("../../fonts/Poppins/Poppins-ExtraBold.ttf");
+  src: url("../../fonts/Poppins/Poppins-ExtraLight.ttf");
+  src: url("../../fonts/Poppins/Poppins-Light.ttf");
+  src: url("../../fonts/Poppins/Poppins-Medium.ttf");
+  src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+  src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+  src: url("../../fonts/Poppins/Poppins-Thin.ttf");
 }
 @font-face {
-    font-family: "Bebas";
-    src: url("../../fonts/BebasNeue-Regular.ttf");
+  font-family: "Bebas";
+  src: url("../../fonts/BebasNeue-Regular.ttf");
 }
 
 .containerTerms {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-    height: 100vh;
-    z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  height: auto;
+  z-index: 9;
 }
 .containerTitleTerms {
-    display: flex;
-    width: 70%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 70%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .titleTerms {
-    color: #FFF;
-    text-align: center;
-    text-shadow: 0px 4px 134px #000;
-    font-family: 'Poppins';
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 100.044%; 
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 134px #000;
+  font-family: "Poppins";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 100.044%;
 }
 .manual {
-    color: #FFF;
-    font-family: "Poppins";
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.32px;
+  color: #fff;
+  font-family: "Poppins";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.32px;
+}
+.containerTermScroll {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 80%;
+  gap: 4em;
+}
+.containerTextScroll {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.textScroll {
+  color: #e6e6e6;
+  text-align: justify;
+  font-family: "Poppins-Light";
+  font-size: 1em;
+  font-style: normal;
+  line-height: normal;
+  margin: 0px;
+}
+.negrita {
+  color: #e6e6e6;
+  font-family: "Poppins-Bold";
+  font-style: normal;
+  line-height: normal;
+  margin: 0px;
+}
+.textComplete {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
 }
