--- a/src/components/cardTerminos/styles.css
+++ b/src/components/cardTerminos/styles.css
@@ -12,7 +12,44 @@
   }
 
 
+
 @media (min-width: 1201px) and (max-width: 1440px) {
+    .lineTerms {
+        background: #5A5A5A;
+        width: 100%;
+        height: 1px;
+    }
+    .navTitleOne {
+        text-decoration: none;
+    }
+    .termsList {
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+        gap: 1em;
+        display: flex;
+        flex-direction: column;
+    }
+    .subNav:hover {
+        color: #62FEE2;
+    }
+    ul {
+        list-style: none;
+    }
+    .subNav {
+        color: #E6E6E6;
+        font-family: 'Poppins-Light';
+        font-size: 1em;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-decoration: none;
+    }
+    .containerLinesText {
+        display: flex;
+    flex-direction: column;
+    gap: 1em;
+    }
     .titleCardItem {
         color: #FFF;
         font-family: 'Poppins';
@@ -21,6 +58,7 @@
         font-weight: 700;
         line-height: normal;
         letter-spacing: 0.16px;
+        text-decoration: none;
     }
     .titleIndice {
         color: #FFF;
@@ -51,5 +89,10 @@
         flex-direction: column;
         align-items: center;
         gap: 16px;
+        height: auto;
     }
+    .selected {
+        color: #62FEE2;
+    }
+
 }
