--- a/src/screens/Terminos/styles.css
+++ b/src/screens/Terminos/styles.css
@@ -15,6 +15,19 @@
   src: url("../../fonts/BebasNeue-Regular.ttf");
 }
 
+
+
+
+
+
+
+.containerAllTerms {
+    /* margin-top: 200px; */
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+}
 .containerTerms {
   display: flex;
   align-items: center;
@@ -25,11 +38,11 @@
   z-index: 9;
 }
 .containerTitleTerms {
-  display: flex;
-  width: 70%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
 .titleTerms {
   color: #fff;
@@ -56,18 +69,32 @@
   justify-content: center;
   width: 80%;
   gap: 4em;
+  z-index: 1;
 }
 .containerTextScroll {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+    display: flex;
+    width: 100%;
+    max-height: 150vh;
+    overflow-y: auto;
+    padding: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 .textScroll {
   color: #e6e6e6;
   text-align: justify;
   font-family: "Poppins-Light";
   font-size: 1em;
+  font-style: normal;
+  line-height: normal;
+  margin: 0px;
+}
+.textScrollPix {
+  color: #e6e6e6;
+  text-align: justify;
+  font-family: "Poppins-Light";
+  font-size: 1.3em;
   font-style: normal;
   line-height: normal;
   margin: 0px;
