--- a/src/screens/Condiciones/styles.css
+++ b/src/screens/Condiciones/styles.css
@@ -1,5 +1,7 @@
 
 
+
+@media (min-width: 360px) and (max-width: 575px) {
 .containerNavCondiciones {
     z-index: 100;
     flex-direction: row;
@@ -16,6 +18,7 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
+    gap: 3em;
 }
 .containerTotalTerminos {
     display: flex;
@@ -24,7 +27,6 @@
 }
 
 .containerTotalCond {
-    margin-top: 200px;
     z-index: 1;
     display: flex;
     gap: 4em;
@@ -39,4 +41,46 @@
     height: 900px;
     overflow-y: scroll;
 }
+}
 
+@media (min-width: 1201px) and (max-width: 1441px) {
+.containerNavCondiciones {
+    z-index: 100;
+    flex-direction: row;
+    display: flex;
+    background: linear-gradient(360deg, rgba(17, 17, 17, 0) 15.94%, #111111e5 66.12%);
+    width: 100%;
+}
+.logoCon {
+    width: 50%;
+}
+.containerSectionCond {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    gap: 3em;
+}
+.containerTotalTerminos {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.containerTotalCond {
+    z-index: 1;
+    display: flex;
+    gap: 4em;
+    width: 80%;
+    align-items: flex-start;
+}  
+.terminos {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    height: 900px;
+    overflow-y: scroll;
+}
+}
