--- a/src/screens/Terminos/styles.css
+++ b/src/screens/Terminos/styles.css
@@ -20,9 +20,8 @@
 
 
 
-
+@media (min-width: 360px) and (max-width: 575px) {
 .containerAllTerms {
-    /* margin-top: 200px; */
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -110,4 +109,96 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
+}
+}
+@media (min-width: 1201px) and (max-width: 1441px) {
+.containerAllTerms {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+.containerTerms {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  height: auto;
+  z-index: 9;
+}
+.containerTitleTerms {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.titleTerms {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 134px #000;
+  font-family: "Poppins";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 100.044%;
+}
+.manual {
+  color: #fff;
+  font-family: "Poppins";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.32px;
+}
+.containerTermScroll {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 80%;
+  gap: 4em;
+  z-index: 1;
+}
+.containerTextScroll {
+    display: flex;
+    width: 100%;
+    max-height: 150vh;
+    overflow-y: auto;
+    padding: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.textScroll {
+  color: #e6e6e6;
+  text-align: justify;
+  font-family: "Poppins-Light";
+  font-size: 1em;
+  font-style: normal;
+  line-height: normal;
+  margin: 0px;
+}
+.textScrollPix {
+  color: #e6e6e6;
+  text-align: justify;
+  font-family: "Poppins-Light";
+  font-size: 1.3em;
+  font-style: normal;
+  line-height: normal;
+  margin: 0px;
+}
+.negrita {
+  color: #e6e6e6;
+  font-family: "Poppins-Bold";
+  font-style: normal;
+  line-height: normal;
+  margin: 0px;
+}
+.textComplete {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
 }
