--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -141,7 +141,7 @@
         text-align: center;
     }
     .containerSectionFive {
-        height: 100vh;
+        height: auto;
     }
     .arrowButton {
         display: none;
