--- a/src/components/Slogan/styles.css
+++ b/src/components/Slogan/styles.css
@@ -75,7 +75,7 @@
     .sloganContainer {
         width: 100%;
         height: 200px;
-        margin-bottom: 30px;
+        margin: 30px 0px;
     }
     .titleSlogan {
         width: 100%;
