--- a/src/screens/Condiciones/styles.css
+++ b/src/screens/Condiciones/styles.css
@@ -1,7 +1,7 @@
 
 
 
-@media (min-width: 360px) and (max-width: 575px) {
+@media (min-width: 360px) {
 .containerNavCondiciones {
     z-index: 100;
     flex-direction: row;
@@ -10,7 +10,17 @@
     width: 100%;
 }
 .logoCon {
-    width: 50%;
+    width: 80%;
+}
+.return {
+    font-size: 1em;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins-Light';
+    font-style: normal;
+    line-height: normal;
 }
 .containerSectionCond {
     display: flex;
@@ -25,7 +35,14 @@
     flex-direction: column;
     width: 100%;
 }
-
+.askCondiciones {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    cursor: pointer;
+    z-index: 1;
+}
 .containerTotalCond {
     z-index: 1;
     display: flex;
@@ -50,6 +67,20 @@
     display: flex;
     background: linear-gradient(360deg, rgba(17, 17, 17, 0) 15.94%, #111111e5 66.12%);
     width: 100%;
+}
+.askCondiciones {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    cursor: pointer;
+    z-index: 1;
+}
+.contenedorCondicionesTotal {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 70%;
 }
 .logoCon {
     width: 50%;
