--- a/src/screens/Terminos/styles.css
+++ b/src/screens/Terminos/styles.css
@@ -16,11 +16,7 @@
 }
 
 
-
-
-
-
-@media (min-width: 360px) and (max-width: 575px) {
+@media (min-width: 360px) {
 .containerAllTerms {
     display: flex;
     width: 100%;
@@ -45,10 +41,10 @@
 }
 .titleTerms {
   color: #fff;
-  text-align: center;
+  text-align: start;
   text-shadow: 0px 4px 134px #000;
   font-family: "Poppins";
-  font-size: 50px;
+  font-size: 2em;
   font-style: normal;
   font-weight: 600;
   line-height: 100.044%;
@@ -82,7 +78,7 @@
 }
 .textScroll {
   color: #e6e6e6;
-  text-align: justify;
+  text-align: start;
   font-family: "Poppins-Light";
   font-size: 1em;
   font-style: normal;
@@ -91,7 +87,7 @@
 }
 .textScrollPix {
   color: #e6e6e6;
-  text-align: justify;
+  text-align: start;
   font-family: "Poppins-Light";
   font-size: 1.3em;
   font-style: normal;
