--- a/src/screens/Condiciones/styles.css
+++ b/src/screens/Condiciones/styles.css
@@ -9,6 +9,9 @@
     background: linear-gradient(360deg, rgba(17, 17, 17, 0) 15.94%, #111111e5 66.12%);
     width: 100%;
 }
+.contenedorCondicionesTotal {
+    width: 90%;
+}
 .logoCon {
     width: 80%;
 }
