--- a/src/components/Card/CardGrag/styles.css
+++ b/src/components/Card/CardGrag/styles.css
@@ -129,7 +129,7 @@
         font-size: 1.4em;
     }
     .subtitleCardDrag {
-        font-size: 1em;
+        font-size: .9em;
         font-family: 'Poppins-Light';
     }
 } 
